--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Agenda</h2>
                     <hr class="primary">
-                    <p>Tuesday 20:00 Social Meetup</p>
+                    <p>Monday 14:00 -> 22:00 Social Meetup @ <a href="theblock.cafe">theblock</a></p>
                     <hr class="primary"><br>
                 </div>
             </div>
@@ -164,32 +164,25 @@
                         <p>Welcome breakfast 9:00 - 9:55 </p>
                         <p>Opening session 9:55 - 10:00</p>
                         <hr class="primary">
-                        <p>Title</p>
+                        <p>10:00 - 10:30<br>Bryan Bishop: <br>State of Bitcoin Over the Years</p>
+                        <p>10:30 - 11:00<br>Adam Ficsor:  <br>Bitcoin Development - It Doesn't Have To Be Boring</p>
+                        <p>11:00 - 11:30<br>Jonas Schnelli: <br>Current state and the future of wallets</p>
+                        <p>11:30 - 12:00<br>Patrícia Estevão: <br>User experience on Bitcoin applications</p>
+                        <p>12:00 - 12:30<br>Tooling Panel</p>
+                        <p>Buffet 12:30 - 14:00</p>
                         <hr class="primary">
-                        <p>10:00 - 10:30<br></p>
-                        <p>10:30 - 11:00<br></p>
-                        <p>11:00 - 11:30<br></p>
-                        <p>Break 11:30 - 11:45</p>
-                        <p>11:45 - 12:15<br></p>
-                        <p>12:15 - 12:45<br></p>
-                        <p>Buffet 12:45 - 14:00</p>
+                        <p>14:00 - 14:30<br>Peter Todd: <br>Single Use Seals</p>
+                        <p>14:30 - 15:00<br>Mustafa Al-Bassam: <br>Contour</p>
+                        <p>15:00 - 15:30<br>Thomas Kerin: <br>Working with scripts with logical opcodes</p>
+                        <p>15:30 - 16:00<br>Nicolas Dorier: <br>How to make everyone use their own full node</p>
+                        <p>Break 16:00 - 16:30</p>
                         <hr class="primary">
-                        <p>Title</p>
-                        <hr class="primary">
-                        <p>14:00 - 14:30<br></p>
-                        <p>14:30 - 15:00<br></p>
-                        <p>15:00 - 15:30<br></p>
-                        <p>15:30 - 16:15<br></p>
-                        <p>Break 16:15 - 16:30</p>
-                        <hr class="primary">
-                        <p>Title</p>
-                        <hr class="primary">
-                        <p>16:30 - 17:00<br></p>
-                        <p>17:00 - 17:30<br></p>
-                        <p>17:30 - 18:15<br></p>
+                        <p>16:30 - 17:00<br>Adam Gibson: <br>CoinJoinXT ... and other techniques for deniable transfers</p>
+                        <p>17:00 - 17:30<br>Giulia Fanti: <br>Dandelion: Privacy-Preserving Transaction Forwarding in Bitcoin's Peer-to-Peer Network</p>
+                        <p>17:30 - 18:15<br>Jonas Nick: <br>Blind Signatures in Scriptless Scripts</p>
                         <p>Close 18:15 - 18:30</p>
                         <p>Metro 18:30 - 19:10</p>
-                        <p>Party at <a href="#" target="_blank">Soon TM</a></p>
+                        <p>Party at <a href="http://clubeferroviario.pt/" target="_blank">Ferroviario</a></p>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 text-center">
@@ -197,29 +190,23 @@
                         <h3 class="mb-4">Wednesday</h3>
                         <p>Welcome breakfast 9:00 - 10:00 </p>
                         <hr class="primary">
-                        <p>Title</p>
+                        <p>10:00 - 10:30<br>Xavier Lavayssière: <br>Regulatory strategies</p>
+                        <p>10:30 - 11:00<br>Giacomo Zucco: <br>Assets on Bitcoin</p>
+                        <p>11:00 - 11:30<br>Jameson Lopp: <br>Building your own bank</p>
+                        <p>11:30 - 12:00<br>Eric Voskuil: <br>Libbitcoin</p>
+                        <p>12:00 - 12:30<br>Panel</p>
+                        <p>Buffet 12:30 - 14:00</p>
                         <hr class="primary">
-                        <p>10:00 - 10:30<br></p>
-                        <p>10:30 - 11:00<br></p>
-                        <p>11:00 - 11:30<br></p>
-                        <p>Break 11:30 - 11:45</p>
-                        <p>11:45 - 12:15<br></p>
-                        <p>12:15 - 12:45<br></p>
-                        <p>Buffet 12:45 - 14:00</p>
+                        <p>14:00 - 14:30<br>Sergej Kotliar: <br>Merchant adoption</p>
+                        <p>14:30 - 15:00<br>Fabrice Drouin: <br>Ln story</p>
+                        <p>15:00 - 15:30<br>Ricardo Pérez Marco: <br>Decentralized anonymous routing algorithm for LN</p>
+                        <p>15:30 - 16:00<br>LN Panel<br>
+                        <p>Break 16:00 - 16:30</p>
                         <hr class="primary">
-                        <p>Title</p>
-                        <hr class="primary">
-                        <p>14:00 - 14:30<br></p>
-                        <p>14:30 - 15:00<br></p>
-                        <p>15:00 - 15:30<br></p>
-                        <p>15:30 - 16:15<br><br>
-                        <p>Break 16:15 - 16:30</p>
-                        <hr class="primary">
-                        <p>Title</p>
-                        <hr class="primary">
-                        <p>16:30 - 17:00<br></p>
-                        <p>17:00 - 18:00<br></p>
-                        <p>18:00 - 18:30<br></p>
+                        <p>16:30 - 17:00<br>Sergio D Lerner: <br>A Drivechain BIP, enabling the OP_COUNT_ACKS opcode to add Bitcoin drivechain capabilities as a soft-fork.</p>
+                        <p>17:00 - 17:30<br>Alexei Zamyatin: <br>Velvet forks</p>
+                        <p>17:30 - 18:00<br>Jorge Timon: <br>Liquid</p>
+                        <p>18:00 - 18:30<br>Paul Sztorc: <br>Consensus and Dissent</p>
                         <p>Closing session 18:30 - 19:00</p>
                     </div>
                 </div>
