fixed theblock link

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Agenda</h2>
                     <hr class="primary">
-                    <p>Monday 14:00 -> 22:00 Social Meetup @ <a href="theblock.cafe">theblock</a></p>
+                    <p>Monday 14:00 -> 22:00 Social Meetup @ <a href="http://theblock.cafe" target="_blank">theblock</a></p>
                     <hr class="primary"><br>
                 </div>
             </div>
