speech title change

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                         <p>Opening session 9:55 - 10:00</p>
                         <hr class="primary">
                         <p>10:00 - 10:30<br>Bryan Bishop: <br>State of Bitcoin Over the Years</p>
-                        <p>10:30 - 11:00<br>Adam Ficsor:  <br>Bitcoin Development - It Doesn't Have To Be Boring</p>
+                        <p>10:30 - 11:00<br>Adam Ficsor:  <br>Anonymous Bitcoin</p>
                         <p>11:00 - 11:30<br>Jonas Schnelli: <br>Current state and the future of wallets</p>
                         <p>11:30 - 12:00<br>Patrícia Estevão: <br>Designing Lightning Wallets for the Bitcoin Users</p>
                         <p>12:00 - 12:30<br>Tooling Panel</p>
