added privacy panel

--- a/index.html
+++ b/index.html
@@ -179,7 +179,8 @@
                         <hr class="primary">
                         <p>16:30 - 17:00<br>Adam Gibson: <br>CoinJoinXT ... and other techniques for deniable transfers</p>
                         <p>17:00 - 17:30<br>Giulia Fanti: <br>Dandelion: Privacy-Preserving Transaction Forwarding in Bitcoin's Peer-to-Peer Network</p>
-                        <p>17:30 - 18:15<br>Jonas Nick: <br>Blind Signatures in Scriptless Scripts</p>
+                        <p>17:30 - 18:00<br>Jonas Nick: <br>Blind Signatures in Scriptless Scripts</p>
+                        <p>18:00 - 18-30<br>Privacy Panel</p>
                         <p>Close 18:15 - 18:30</p>
                         <p>Metro 18:30 - 19:10</p>
                         <p>Party at <a href="http://clubeferroviario.pt/" target="_blank">Ferroviario</a></p>
