--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
                                     </a>
                                 </div>
                                 <div class="col-md-4">
-                                    <a class="sponsor" href="https://twitter.com/CryptoFR" target="_blank">
+                                    <a class="sponsor" href="https://twitter.com/CryptoTrust_io" target="_blank">
                                         <img class="img-fluid" src="img/sponsors/gold/cryptotrust.png" alt="Cryptotrust">
                                     </a>
                                 </div>
