added slides + transcripts & videos links

--- a/index.html
+++ b/index.html
@@ -164,23 +164,23 @@
                         <p>Welcome breakfast 9:00 - 9:55 </p>
                         <p>Opening session 9:55 - 10:00</p>
                         <hr class="primary">
-                        <p>10:00 - 10:30<br>Bryan Bishop: <br>State of Bitcoin Over the Years</p>
-                        <p>10:30 - 11:00<br>Adam Ficsor:  <br>Anonymous Bitcoin</p>
-                        <p>11:00 - 11:30<br>Jonas Schnelli: <br>Current state and the future of wallets</p>
-                        <p>11:30 - 12:00<br>Patrícia Estevão: <br>Designing Lightning Wallets for the Bitcoin Users</p>
-                        <p>12:00 - 12:30<br>Tooling Panel</p>
+                        <p>10:00 - 10:30<br>Bryan Bishop: <br>State of Bitcoin Over the Years<br><a href="docs/slides/Bryan_Bishop_BoB_2018.pdf" target="_blank">Slides</a>&nbsp;&nbsp;<a href="https://youtu.be/adZhDoXSjJ0" target"_blank">Video</a></p>
+		<p>10:30 - 11:00<br>Adam Ficsor:  <br>Anonymous Bitcoin<br><a href="http://diyhpl.us/wiki/transcripts/building-on-bitcoin/2018/anonymous-bitcoin/" target="_blank">Transcript</a>&nbsp;&nbsp;<a href="https://www.youtube.com/watch?v=QiySI4-MWww" target="_blank">Video</a></p>
+                        <p>11:00 - 11:30<br>Jonas Schnelli: <br>Current state and the future of wallets<br><a href="docs/slides/Jonas_Schnelli_BoB_2018.pdf" target="_blank">Slides</a>&nbsp;&nbsp;<a href="http://diyhpl.us/wiki/transcripts/building-on-bitcoin/2018/current-and-future-state-of-wallets/" target="_blank">Transcript</a>&nbsp;&nbsp;<a href="https://www.youtube.com/watch?v=CO2NXDWJa08" target="_blank">Video</a></p>
+                        <p>11:30 - 12:00<br>Patrícia Estevão: <br>Designing Lightning Wallets for the Bitcoin Users<br><a href="docs/slides/Patricia_Estevao_BoB_2018.pdf" target="_blank">Slides</a>&nbsp;&nbsp;<a href="http://diyhpl.us/wiki/transcripts/building-on-bitcoin/2018/lightning-wallet-design/" target="_blank">Transcript</a>&nbsp;&nbsp;<a href="https://www.youtube.com/watch?v=S2TgCUU_WDo" target="_blank">Video</a></p>
+                        <p>12:00 - 12:30<br>Tooling Panel<br><a href="http://diyhpl.us/wiki/transcripts/building-on-bitcoin/2018/tooling/" target="_blank">Transcript</a>&nbsp;&nbsp;<a href="https://www.youtube.com/watch?v=fjtmyaH6MG8" target="_blank">Video</a></p>
                         <p>Buffet 12:30 - 14:00</p>
                         <hr class="primary">
-                        <p>14:00 - 14:30<br>Peter Todd: <br>Single Use Seals</p>
-                        <p>14:30 - 15:00<br>Mustafa Al-Bassam: <br>Contour</p>
-                        <p>15:00 - 15:30<br>Thomas Kerin: <br>Working with scripts with logical opcodes</p>
-                        <p>15:30 - 16:00<br>Nicolas Dorier: <br>How to make everyone use their own full node</p>
+                        <p>14:00 - 14:30<br>Peter Todd: <br>Single Use Seals<br><a href="docs/slides/Peter_Todd_BoB_2018.pdf" target="_blank">Slides</a>&nbsp;&nbsp;<a href="http://diyhpl.us/wiki/transcripts/building-on-bitcoin/2018/single-use-seals/" target="_blank">Transcript</a>&nbsp;&nbsp;<a href="https://www.youtube.com/watch?v=1U-1xkhJeEo" target="_blank">Video</a></p>
+                        <p>14:30 - 15:00<br>Mustafa Al-Bassam: <br>Contour<br><a href ="http://diyhpl.us/wiki/transcripts/building-on-bitcoin/2018/binary-transparency/" target="_blank">Transcript</a>&nbsp;&nbsp;<a href="https://www.youtube.com/watch?v=59Igv-zQE7Y" target="_blank">Video</a></p>
+                        <p>15:00 - 15:30<br>Thomas Kerin: <br>Working with scripts with logical opcodes<br><a href="http://diyhpl.us/wiki/transcripts/building-on-bitcoin/2018/working-on-scripts/" target="_blank">Transcript</a>&nbsp;&nbsp;<a href="https://www.youtube.com/watch?v=A4l4waikDso" target="_blank">Video</a></p>
+                        <p>15:30 - 16:00<br>Nicolas Dorier: <br>How to make everyone use their own full node<br><a href="docs/slides/Nicolas_Dorier_BoB_2018.pdf" target="_blank">Slides</a>&nbsp;&nbsp;<a href="http://diyhpl.us/wiki/transcripts/building-on-bitcoin/2018/btcpay/" target="_blank">Transcript</a>&nbsp;&nbsp;<a href="https://www.youtube.com/watch?v=0UiMhpz9eLA" target="_blank">Video</a></p>
                         <p>Break 16:00 - 16:30</p>
                         <hr class="primary">
-                        <p>16:30 - 17:00<br>Adam Gibson: <br>CoinJoinXT ... and other techniques for deniable transfers</p>
-                        <p>17:00 - 17:30<br>Giulia Fanti: <br>Dandelion: Privacy-Preserving Transaction Forwarding in Bitcoin's Peer-to-Peer Network</p>
-                        <p>17:30 - 18:00<br>Jonas Nick: <br>Blind Signatures in Scriptless Scripts</p>
-                        <p>18:00 - 18-30<br>Privacy Panel</p>
+                        <p>16:30 - 17:00<br>Adam Gibson: <br>CoinJoinXT ... and other techniques for deniable transfers<br><a href="http://diyhpl.us/wiki/transcripts/building-on-bitcoin/2018/coinjoinxt/" target="_blank">Transcript</a>&nbsp;&nbsp;<a href="https://www.youtube.com/watch?v=YS0MksuMl9k" target="_blank">Video</a></p>
+                        <p>17:00 - 17:30<br>Giulia Fanti: <br>Dandelion: Privacy-Preserving Transaction Forwarding in Bitcoin's Peer-to-Peer Network<br><a href="http://diyhpl.us/wiki/transcripts/building-on-bitcoin/2018/dandelion/" target="_blank">Transcript</a>&nbsp;&nbsp;<a href="https://www.youtube.com/watch?v=SrE6KdBgI1o" target="_blank">Video</a></p>
+                        <p>17:30 - 18:00<br>Jonas Nick: <br>Blind Signatures in Scriptless Scripts<br><a href="docs/slides/Jonas_Nick_BoB_2018.pdf" target="_blank">Slides</a>&nbsp;&nbsp;<a href="http://diyhpl.us/wiki/transcripts/building-on-bitcoin/2018/blind-signatures-and-scriptless-scripts/" target="_blank">Transcript</a>&nbsp;&nbsp;<a href="https://www.youtube.com/watch?v=_1dcU70zhqs" target="_blank">Video</a></p>
+                        <p>18:00 - 18-30<br>Privacy Panel<br><a href="https://www.youtube.com/watch?v=HE4Z1RZI95k" target"_blank">Video</a></p>
                         <p>Close 18:15 - 18:30</p>
                         <p>Metro 18:30 - 19:10</p>
                         <p>Party at <a href="http://clubeferroviario.pt/" target="_blank">Ferroviario</a></p>
@@ -191,23 +191,23 @@
                         <h3 class="mb-4">Wednesday</h3>
                         <p>Welcome breakfast 9:00 - 10:00 </p>
                         <hr class="primary">
-                        <p>10:00 - 10:30<br>Xavier Lavayssière: <br>Regulatory strategies</p>
-                        <p>10:30 - 11:00<br>Giacomo Zucco: <br>Assets on Bitcoin</p>
-                        <p>11:00 - 11:30<br>Jameson Lopp: <br>Building your own bank</p>
-                        <p>11:30 - 12:00<br>Eric Voskuil: <br>Libbitcoin</p>
+                        <p>10:00 - 10:30<br>Xavier Lavayssière: <br>Regulatory strategies<br><a href="https://www.youtube.com/watch?v=T0vg65_InO4" target"_blank">Video</a></p>
+                        <p>10:30 - 11:00<br>Giacomo Zucco: <br>Assets on Bitcoin<br><a href="http://diyhpl.us/wiki/transcripts/building-on-bitcoin/2018/bitcoin-assets/" target="_blank">Transcript</a>&nbsp;&nbsp;<a href="https://www.youtube.com/watch?v=xHWxtmgQP94" target"_blank">Video</a></p>
+                        <p>11:00 - 11:30<br>Jameson Lopp: <br>Building your own bank<br><a href="docs/slides/Jameson_Lopp_BoB_2018.pdf" target="_blank">Slides</a>&nbsp;&nbsp;<a href="http://diyhpl.us/wiki/transcripts/building-on-bitcoin/2018/crypto-castles/" target="_blank">Transcript</a>&nbsp;&nbsp;<a href="https://www.youtube.com/watch?v=gXDR4tjaGQc" target="_blank">Video</a></p>
+                        <p>11:30 - 12:00<br>Eric Voskuil: <br>Libbitcoin<br><a href="docs/slides/Eric_Voskuil_BoB_2018.pdf" target="_blank">Slides</a>&nbsp;&nbsp;<a href="http://diyhpl.us/wiki/transcripts/building-on-bitcoin/2018/libbitcoin/" target="_blank">Transcript</a>&nbsp;&nbsp;<a href="https://www.youtube.com/watch?v=QtB4YUneiEE" target="_blank">Video</a></p>
                         <p>12:00 - 12:30<br>Panel</p>
                         <p>Buffet 12:30 - 14:00</p>
                         <hr class="primary">
-                        <p>14:00 - 14:30<br>Sergej Kotliar: <br>Merchant adoption</p>
-                        <p>14:30 - 15:00<br>Fabrice Drouin: <br>Ln story</p>
-                        <p>15:00 - 15:30<br>Ricardo Pérez Marco: <br>Decentralized anonymous routing algorithm for LN</p>
-                        <p>15:30 - 16:00<br>LN Panel<br>
+                        <p>14:00 - 14:30<br>Sergej Kotliar: <br>Merchant adoption<br><a href="https://www.youtube.com/watch?v=H4n5uSG-sj8" target"_blank">Video</a></p>
+                        <p>14:30 - 15:00<br>Fabrice Drouin: <br>Ln story<br><a href="http://diyhpl.us/wiki/transcripts/building-on-bitcoin/2018/bootstrapping-lightning-network/" target="_blank">Transcript</a>&nbsp;&nbsp;<a href="https://www.youtube.com/watch?v=yzbj6ZsCiOg" target="_blank">Video</a></p>
+                        <p>15:00 - 15:30<br>Ricardo Pérez Marco: <br>Decentralized anonymous routing algorithm for LN<br><a href="http://diyhpl.us/wiki/transcripts/building-on-bitcoin/2018/lightning-routing-ants-pheromones/" target="_blank">Transcript</a>&nbsp;&nbsp;<a href="https://www.youtube.com/watch?v=nmqniwbwCg0" target="_blank">Video</a></p>
+                        <p>15:30 - 16:00<br>LN Panel<br><a href="https://www.youtube.com/watch?v=jcMXaFiFvTM" target"_blank">Video</a></p>
                         <p>Break 16:00 - 16:30</p>
                         <hr class="primary">
-                        <p>16:30 - 17:00<br>Sergio D Lerner: <br>A Drivechain BIP, enabling the OP_COUNT_ACKS opcode to add Bitcoin drivechain capabilities as a soft-fork.</p>
-                        <p>17:00 - 17:30<br>Alexei Zamyatin: <br>Velvet forks</p>
-                        <p>17:30 - 18:00<br>Jorge Timon: <br>Liquid</p>
-                        <p>18:00 - 18:30<br>Paul Sztorc: <br>Consensus and Dissent</p>
+                        <p>16:30 - 17:00<br>Sergio D Lerner: <br>A Drivechain BIP, enabling the OP_COUNT_ACKS opcode to add Bitcoin drivechain capabilities as a soft-fork.<br><a href="docs/slides/Sergio_Demian_Lerner_BoB_2018.pdf" target="_blank">Slides</a>&nbsp;&nbsp;<a href="https://www.youtube.com/watch?v=fL7pTbTv1Iw" target="_blank">Video</a></p>
+                        <p>17:00 - 17:30<br>Alexei Zamyatin: <br>Velvet forks<br><a href="docs/slides/Alexei_Zamyatin_BoB_2018.pdf" target="_blank">Slides</a>&nbsp;&nbsp;<a href="https://www.youtube.com/watch?v=jXvUa7oCaVs" target="_blank">Video</a></p>
+                        <p>17:30 - 18:00<br>Jorge Timon: <br>Liquid<br><a href="https://www.youtube.com/watch?v=OYfTCSJakKA" target"_blank">Video</a></p>
+                        <p>18:00 - 18:30<br>Paul Sztorc: <br>Consensus and Dissent<br><a href="docs/slides/Paul_Sztorc_BoB_2018.pdf" target="_blank">Slides</a>&nbsp;&nbsp;<a href="https://www.youtube.com/watch?v=15lBZQTN-eg" target="_blank">Video</a></p>
                         <p>Closing session 18:30 - 19:00</p>
                     </div>
                 </div>
