--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                         <p>Opening session 9:55 - 10:00</p>
                         <hr class="primary">
                         <p>10:00 - 10:30<br>Bryan Bishop: <br>State of Bitcoin Over the Years<br><a href="docs/slides/Bryan_Bishop_BoB_2018.pdf" target="_blank">Slides</a>&nbsp;&nbsp;<a href="https://youtu.be/adZhDoXSjJ0" target"_blank">Video</a></p>
-		<p>10:30 - 11:00<br>Adam Ficsor:  <br>Anonymous Bitcoin<br><a href="http://diyhpl.us/wiki/transcripts/building-on-bitcoin/2018/anonymous-bitcoin/" target="_blank">Transcript</a>&nbsp;&nbsp;<a href="https://www.youtube.com/watch?v=QiySI4-MWww" target="_blank">Video</a></p>
+		<p>10:30 - 11:00<br>Adam Ficsor:  <br>Anonymous Bitcoin<br><a href="https://prezi.com/view/4biN62sLkyS0w7muL2w4/" target="_blank">Slides</a>&nbsp;&nbsp;<a href="http://diyhpl.us/wiki/transcripts/building-on-bitcoin/2018/anonymous-bitcoin/" target="_blank">Transcript</a>&nbsp;&nbsp;<a href="https://www.youtube.com/watch?v=QiySI4-MWww" target="_blank">Video</a></p>
                         <p>11:00 - 11:30<br>Jonas Schnelli: <br>Current state and the future of wallets<br><a href="docs/slides/Jonas_Schnelli_BoB_2018.pdf" target="_blank">Slides</a>&nbsp;&nbsp;<a href="http://diyhpl.us/wiki/transcripts/building-on-bitcoin/2018/current-and-future-state-of-wallets/" target="_blank">Transcript</a>&nbsp;&nbsp;<a href="https://www.youtube.com/watch?v=CO2NXDWJa08" target="_blank">Video</a></p>
                         <p>11:30 - 12:00<br>Patrícia Estevão: <br>Designing Lightning Wallets for the Bitcoin Users<br><a href="docs/slides/Patricia_Estevao_BoB_2018.pdf" target="_blank">Slides</a>&nbsp;&nbsp;<a href="http://diyhpl.us/wiki/transcripts/building-on-bitcoin/2018/lightning-wallet-design/" target="_blank">Transcript</a>&nbsp;&nbsp;<a href="https://www.youtube.com/watch?v=S2TgCUU_WDo" target="_blank">Video</a></p>
                         <p>12:00 - 12:30<br>Tooling Panel<br><a href="http://diyhpl.us/wiki/transcripts/building-on-bitcoin/2018/tooling/" target="_blank">Transcript</a>&nbsp;&nbsp;<a href="https://www.youtube.com/watch?v=fjtmyaH6MG8" target="_blank">Video</a></p>
@@ -173,12 +173,12 @@
                         <hr class="primary">
                         <p>14:00 - 14:30<br>Peter Todd: <br>Single Use Seals<br><a href="docs/slides/Peter_Todd_BoB_2018.pdf" target="_blank">Slides</a>&nbsp;&nbsp;<a href="http://diyhpl.us/wiki/transcripts/building-on-bitcoin/2018/single-use-seals/" target="_blank">Transcript</a>&nbsp;&nbsp;<a href="https://www.youtube.com/watch?v=1U-1xkhJeEo" target="_blank">Video</a></p>
                         <p>14:30 - 15:00<br>Mustafa Al-Bassam: <br>Contour<br><a href ="http://diyhpl.us/wiki/transcripts/building-on-bitcoin/2018/binary-transparency/" target="_blank">Transcript</a>&nbsp;&nbsp;<a href="https://www.youtube.com/watch?v=59Igv-zQE7Y" target="_blank">Video</a></p>
-                        <p>15:00 - 15:30<br>Thomas Kerin: <br>Working with scripts with logical opcodes<br><a href="http://diyhpl.us/wiki/transcripts/building-on-bitcoin/2018/working-on-scripts/" target="_blank">Transcript</a>&nbsp;&nbsp;<a href="https://www.youtube.com/watch?v=A4l4waikDso" target="_blank">Video</a></p>
+			<p>15:00 - 15:30<br>Thomas Kerin: <br>Working with scripts with logical opcodes<br><a href="docs/slides/Thomas_Kerin_BoB_2018.pdf" target="_blank">Slides</a>&nbsp;&nbsp;<a href="http://diyhpl.us/wiki/transcripts/building-on-bitcoin/2018/working-on-scripts/" target="_blank">Transcript</a>&nbsp;&nbsp;<a href="https://www.youtube.com/watch?v=A4l4waikDso" target="_blank">Video</a></p>
                         <p>15:30 - 16:00<br>Nicolas Dorier: <br>How to make everyone use their own full node<br><a href="docs/slides/Nicolas_Dorier_BoB_2018.pdf" target="_blank">Slides</a>&nbsp;&nbsp;<a href="http://diyhpl.us/wiki/transcripts/building-on-bitcoin/2018/btcpay/" target="_blank">Transcript</a>&nbsp;&nbsp;<a href="https://www.youtube.com/watch?v=0UiMhpz9eLA" target="_blank">Video</a></p>
                         <p>Break 16:00 - 16:30</p>
                         <hr class="primary">
                         <p>16:30 - 17:00<br>Adam Gibson: <br>CoinJoinXT ... and other techniques for deniable transfers<br><a href="http://diyhpl.us/wiki/transcripts/building-on-bitcoin/2018/coinjoinxt/" target="_blank">Transcript</a>&nbsp;&nbsp;<a href="https://www.youtube.com/watch?v=YS0MksuMl9k" target="_blank">Video</a></p>
-                        <p>17:00 - 17:30<br>Giulia Fanti: <br>Dandelion: Privacy-Preserving Transaction Forwarding in Bitcoin's Peer-to-Peer Network<br><a href="http://diyhpl.us/wiki/transcripts/building-on-bitcoin/2018/dandelion/" target="_blank">Transcript</a>&nbsp;&nbsp;<a href="https://www.youtube.com/watch?v=SrE6KdBgI1o" target="_blank">Video</a></p>
+			<p>17:00 - 17:30<br>Giulia Fanti: <br>Dandelion: Privacy-Preserving Transaction Forwarding in Bitcoin's Peer-to-Peer Network<br><a href="docs/slides/Giulia_Fanti_BoB_2018.pdf" target="_blank">Slides</a>&nbsp;&nbsp;<a href="http://diyhpl.us/wiki/transcripts/building-on-bitcoin/2018/dandelion/" target="_blank">Transcript</a>&nbsp;&nbsp;<a href="https://www.youtube.com/watch?v=SrE6KdBgI1o" target="_blank">Video</a></p>
                         <p>17:30 - 18:00<br>Jonas Nick: <br>Blind Signatures in Scriptless Scripts<br><a href="docs/slides/Jonas_Nick_BoB_2018.pdf" target="_blank">Slides</a>&nbsp;&nbsp;<a href="http://diyhpl.us/wiki/transcripts/building-on-bitcoin/2018/blind-signatures-and-scriptless-scripts/" target="_blank">Transcript</a>&nbsp;&nbsp;<a href="https://www.youtube.com/watch?v=_1dcU70zhqs" target="_blank">Video</a></p>
                         <p>18:00 - 18-30<br>Privacy Panel<br><a href="https://www.youtube.com/watch?v=HE4Z1RZI95k" target"_blank">Video</a></p>
                         <p>Close 18:15 - 18:30</p>
@@ -206,7 +206,7 @@
                         <hr class="primary">
                         <p>16:30 - 17:00<br>Sergio D Lerner: <br>A Drivechain BIP, enabling the OP_COUNT_ACKS opcode to add Bitcoin drivechain capabilities as a soft-fork.<br><a href="docs/slides/Sergio_Demian_Lerner_BoB_2018.pdf" target="_blank">Slides</a>&nbsp;&nbsp;<a href="https://www.youtube.com/watch?v=fL7pTbTv1Iw" target="_blank">Video</a></p>
                         <p>17:00 - 17:30<br>Alexei Zamyatin: <br>Velvet forks<br><a href="docs/slides/Alexei_Zamyatin_BoB_2018.pdf" target="_blank">Slides</a>&nbsp;&nbsp;<a href="https://www.youtube.com/watch?v=jXvUa7oCaVs" target="_blank">Video</a></p>
-                        <p>17:30 - 18:00<br>Jorge Timon: <br>Liquid<br><a href="https://www.youtube.com/watch?v=OYfTCSJakKA" target"_blank">Video</a></p>
+			<p>17:30 - 18:00<br>Jorge Timon: <br>Liquid<br><a href="docs/slides/Jorge_Timon_Bob_2018.pdf" target="_blank">Slides</a>&nbsp;&nbsp;<a href="https://www.youtube.com/watch?v=OYfTCSJakKA" target"_blank">Video</a></p>
                         <p>18:00 - 18:30<br>Paul Sztorc: <br>Consensus and Dissent<br><a href="docs/slides/Paul_Sztorc_BoB_2018.pdf" target="_blank">Slides</a>&nbsp;&nbsp;<a href="https://www.youtube.com/watch?v=15lBZQTN-eg" target="_blank">Video</a></p>
                         <p>Closing session 18:30 - 19:00</p>
                     </div>
@@ -558,7 +558,7 @@
                                     </a>
                                 </div>
                                 <div class="col-4 col-sm-4 col-md-2">
-                                    <a class="sponsor" href="#" target="_blank">
+                                    <a class="sponsor" href="http://satoshi.design/" target="_blank">
                                         <img class="img-fluid rounded-circle" src="img/sponsors/silver/satoshiDesign.png" alt="satoshiDesign">
                                     </a>
                                 </div>
